hopefully fixes spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 120%;
+  font-size: 118%;
 }
 
 code {
@@ -58,17 +58,17 @@ header {
 }
 
 #jed {
-  width: 20vw;
+  width: 18vw;
   opacity: .6;
 }
 
 #options {
-  width: 80vw;
+  width: 82vw;
   height: 100px;
 }
 
 nav {
-  width: 80vw;
+  width: 82vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -96,14 +96,14 @@ main {
 #projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 .project {
-  width: 525px;
-  height: 250px;
-  margin: 35px auto 0px auto;
+  width: 500px;
+  height: 240px;
+  margin: 25px auto 0px auto;
   display: flex;
   justify-content: space-between;
 }
@@ -144,7 +144,6 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  /* height: 80px; */
 }
 
 .deployed {
